# portfolio-site

./: .dockerignore  .gitignore  Database queires.md  Database scratchpad.md  Progress tracking.md  Project Overview-Readme(maybe).md  README.md  docker-compose.yml  docker.env  dockerfile  todo.md  update.sh
.obsidian/: graph.json  workspace.json
images/: usage.md
portfolio_back/: Cargo.toml  diesel.toml
portfolio_back/migrations/2025-05-03-173747_create_posts/: down.sql  up.sql
portfolio_back/migrations/2025-08-21-205058_create_users/: up.sql
portfolio_back/src/: db.rs  main.rs  models.rs  schema.rs
portfolio_back/src/db/: chapters.rs  entries.rs  loggger.rs  mod.rs  projects.rs  users.rs
portfolio_back/src/routes/: auth.rs  auth_middleware.rs  chapters.rs  entries.rs  logger.rs  mod.rs  projects.rs
portfolio_db/: dbcreate.sql  dockerfile
portfolio_front/: .prettierrc  index.html  package-lock.json  package.json
portfolio_front/src/: index.css  main.tsx
portfolio_front/src/api/: auth.ts  chapters.ts  entries.ts  projects.ts
portfolio_front/src/context/: AuthContext.tsx
portfolio_front/src/modules/: ConfirmationModal.tsx  global_buttons.tsx
portfolio_front/src/pages/: ChapterPage.tsx  ChaptersPage.tsx  EntriesPage.tsx  HomePage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx
portfolio_front/src/structs/: chapter.ts  entry.ts  project.ts  project.tsx
